tests/ui/consts/missing_assoc_const_type.stderr
error: missing type for `const` item
  --> $DIR/missing_assoc_const_type.rs:12:17
   |
LL |     const FIRST:  = 10;
   |                 ^
   |
help: provide a type for the associated constant
   |
LL |     const FIRST: u8  = 10;
   |                  ++

error: aborting due to 1 previous error

